k8s-2048/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  # k8s-2048 Namespaceに作成されるように指定する
  namespace: k8s-2048
  # Deployment名
  name: k8s-2048

# Deploymentの定義
# Podの定義を入れ子にして定義できる（spec.template）
spec:
  # Podの起動数を指定する
  replicas: 1

  # 管理するPodのラベル
  # Podのmetadata.labelsと一緒にしておくこと
  selector:
    matchLabels:
      app.kubernetes.io/name: k8s-2048

  # Podの定義
  template:
    metadata:
      labels:
        app.kubernetes.io/name: k8s-2048

    spec:
      containers:
      - name: k8s-2048
        # 2048パズル用のコンテナイメージを指定する
        image: alexwhen/docker-2048
        # コンテナのポートをクラスタ内に公開する
        ports:
        - name: http
          containerPort: 80
          protocol: TCP
